--- a/Menu.html
+++ b/Menu.html
@@ -41,24 +41,42 @@
       </div>
     </div>
 
-    <div class="container">
 
+     <div class="container">
+<div class="row">
+<div class="col-md-12 col-sm-12 col-xs-12" id="snack">
+<center><h1 id="snacks">SNACKS</h1><center>
+  <br>
+</div>
+</div>
+</div>
 
-      <div class="row">
-        <div class="col-md-6 col-sm-4">
-          <h1>THIS IS THE MENU PAGE</h1>
-        </div>
-        <div class="col-md-6 col-sm-8"
-        <p>Use this document as a way to quickly start any new project. All you get is this text and a mostly barebones HTML document.</p>
-        <p>Second paragraph goes here...</p>
-      </div>
-    </div>
-
-
-    <div class="row">
-     <div class="col-md-6">Left test</div>
-     <div class="col-md-6">Right test</div>
-    </div>
+<section class="Snacks">
+<div class="container">
+<div class="row">
+<div class="col-md-3 col-sm-2 col-xs-1">
+<img id="Beef" src="img/beef.jpg" alt="Mo Beef">
+</div>
+<div class="col-md-6 col-sm-8 col-xs-10">
+<div class="row">
+<div class="col-sm-4 col-xs-4">
+<p>Pretzels with <br> house cheese sauce <br>$6<br><br> Smoked <br> Onion Rings <br> $7 </p>
+</div>
+<div class="col-sm-4 col-xs-4">
+<p>Loaded Fries <br> sm $5 lg $8 <br><br> Chili Cheese Fries <br> sm $4 lg $7 <br> <br>Smoked Jalapeno <br> Chicken Wings <br> $9</p>
+</div>
+<div class="col-sm-4 col-xs-4">
+<p>Fried Pickles <br> $5 <br><br> 5 Meat Chili <br> -or- <br> Soup Du Jour <br> cup $3, bowl $6</p>
+</div>
+</div>
+</div>
+<div class="col-md-3 col-sm-2 col-xs-1">
+<img id="Homemade" src="http://baileysrange.com/files/2012/04/Range_Logo_small.jpg" alt="Homemade">
+</div>
+</div>
+</div>
+</div>
+</section>
 
     </div><!-- /.container -->
 
