--- a/Menu.html
+++ b/Menu.html
@@ -41,8 +41,8 @@
       </div>
     </div>
 
-
-     <div class="container">
+     
+<div class="container">
 <div class="row">
 <div class="col-md-12 col-sm-12 col-xs-12" id="snack">
 <center><h1 id="snacks">SNACKS</h1><center>
@@ -55,28 +55,92 @@
 <div class="container">
 <div class="row">
 <div class="col-md-3 col-sm-2 col-xs-1">
-<img id="Beef" src="img/beef.jpg" alt="Mo Beef">
+<img id="Beef" src="img/beef.png" alt="Beef">
 </div>
 <div class="col-md-6 col-sm-8 col-xs-10">
 <div class="row">
 <div class="col-sm-4 col-xs-4">
-<p>Pretzels with <br> house cheese sauce <br>$6<br><br> Smoked <br> Onion Rings <br> $7 </p>
+<p>Pretzels with <br> house cheese sauce <br><b>$6</b><br><br> Smoked <br> Onion Rings <br> <b>$7</b> </p>
 </div>
 <div class="col-sm-4 col-xs-4">
-<p>Loaded Fries <br> sm $5 lg $8 <br><br> Chili Cheese Fries <br> sm $4 lg $7 <br> <br>Smoked Jalapeno <br> Chicken Wings <br> $9</p>
+<p>Loaded Fries <br> sm <b>$5</b> lg <b>$8</b> <br><br> Chili Cheese Fries <br> sm <b>$4</b> lg <b>$7</b> <br> <br>Smoked Jalapeno <br> Chicken Wings <br> <b>$9</b></p>
 </div>
 <div class="col-sm-4 col-xs-4">
-<p>Fried Pickles <br> $5 <br><br> 5 Meat Chili <br> -or- <br> Soup Du Jour <br> cup $3, bowl $6</p>
+<p>Fried Pickles <br> <b>$5</b> <br><br> 5 Meat Chili <br> -or- <br> Soup Du Jour <br> cup <b>$3</b>, bowl <b>$6</b></p>
 </div>
 </div>
 </div>
 <div class="col-md-3 col-sm-2 col-xs-1">
-<img id="Homemade" src="http://baileysrange.com/files/2012/04/Range_Logo_small.jpg" alt="Homemade">
+<img id="IceCream" src="img/IceCream.png" alt="Ice Cream">
 </div>
 </div>
 </div>
 </div>
 </section>
+
+<br>
+
+<section class="Burgers">
+<div class="container">
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-4"><img id="burgersheader" src="img/Burgers.png" alt="Burgers"></div>
+  <div class="col-md-4"></div>
+</div>
+
+<br>
+
+<div class="row">
+  <div class="col-md-4 col-sm-4 col-xs-4"></div>
+  <div class="col-md-4 col-sm-4 col-xs-4">choose one of our fresh, house baked buns <br>
+BEER BUN - PRETZEL BUN ($1) - GLUTEN FREE BUN</div>
+  <div class="col-md-4 col-sm-4 col-xs-4"></div>
+</div>
+
+<br>
+
+<div class="row">
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Dave's Smoked................$11</b><br>smoked beef patty, grilled onions,fontina, lettuce, tomato, rooster mayo</p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Basic............$6</b><br>Toppings: mayo, catsup, mustard, lettuce, tomato, onion, pickle chips</p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Green Chile...........$12</b><br>cumin and green chile rubbed smoked beef patty, fire roasted corn salsa, queso manchego, jalapeno jam sour cream, cilantro pesto, fried avocado wedge</p></div>
+</div>
+
+<div class="row">
+  <div class="col-md-4 col-sm-4 col-xs-4"><p> <b>American................$11</b><br>beef patty, fried mac’n’cheese patty, bacon, house sauce, sriracha mayo</p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Substitute another meat:</b><br>Pork $2 Chicken $2 Bison $4 <br> <b>in place of grassfed beef</b></p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>PB&J...........$11</b><br>arugula pesto, bison patty, house tomato jam, goat cheese, arugula</p></div>
+</div>
+
+<br>
+
+<div class="row">
+  <div class="col-md-4 col-sm-4 col-xs-4"><p> <b>Wildfire................$10</b><br>smoked beef patty, chipotle cashew butter, red onion, cilantro, fontina, chipotle mayo</p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Ozark............$10</b><br>Ozark Forest crimini mushrooms, caramelized onions, black peppered goat cheese, lettuce, tomato, onion</p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Bison Au Poivre...........$11</b><br>peppercorn crusted bison patty, bleu cheese, bacon jam, caramelized onions, port glaze</p></div>
+</div>
+
+<br>
+
+<div class="row">
+  <div class="col-md-4 col-sm-4 col-xs-4"><p> <b>Ahh Jamn!................$11</b><br>beef patty, bacon jam, mushrooms, red onion, cheddar cheese</p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Smoke & Fire............$11</b><br>smoked beef patty, grilled onions, white cheddar cheese, poblano sour cream, jalapenos, fried flour tortilla strips</p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Buffalo...........$10</b><br>ground chicken patty, house made buffalo hot sauce, cheddar, bacon, ranch</p></div>
+</div>
+
+<div class="row">
+  <div class="col-md-4 col-sm-4 col-xs-4"><p> <b>The Popper................$11</b><br>beef patty stuffed with a bacon jalapeno popper, mixed greens, ranch</p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Mexicali............$11</b><br>pork patty, house salsa, guacamole, queso, chipotle mayo</p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Gyro...........$12</b><br>lamb patty, feta, mixed greens, tomato, red onion, bell peppers, tzatziki sauce</p></div>
+</div>
+
+<br>
+
+<div class="row">
+  <div class="col-md-4 col-sm-4 col-xs-4"><p> <b>Patty Melt................$9</b><br>thin pressed beef, emmenthaler, grilled onions, rooster mayo, on rye bread</p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Carolina............$11</b><br>pork patty topped with smoked pork shoulder, house bbq sauce & slaw</p></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Veggie...........$9</b><br>chickpea lemon and basil patty, kale, walnut butter, parmesean artichoke sundried tomato spread/p></div>
+</div>
+
 
     </div><!-- /.container -->
 
