so many changes

--- a/Menu.html
+++ b/Menu.html
@@ -83,9 +83,9 @@
 <section class="Burgers">
 <div class="container">
 <div class="row">
-  <div class="col-md-4"></div>
-  <div class="col-md-4"><img id="burgersheader" src="img/Burgers.png" alt="Burgers"></div>
-  <div class="col-md-4"></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"><img id="burgersheader" src="img/Burgers.png" alt="Burgers"></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"></div>
 </div>
 
 <br>
@@ -140,6 +140,50 @@ BEER BUN - PRETZEL BUN ($1) - GLUTEN FREE BUN</div>
   <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Carolina............$11</b><br>pork patty topped with smoked pork shoulder, house bbq sauce & slaw</p></div>
   <div class="col-md-4 col-sm-4 col-xs-4"><p><b>Veggie...........$9</b><br>chickpea lemon and basil patty, kale, walnut butter, parmesean artichoke sundried tomato spread/p></div>
 </div>
+</section>
+
+<br>
+
+<section class="SidesBurgerBattleFries">
+<div class="container">
+<div class="row">
+<div class="col-md-3 col-sm-4 col-xs-5"><center><h3> Sides </h3><center></div>
+  <div class="col-md-6 col-sm-4 col-xs-2"><center> <h2> BURGER BATTLE </h2><center></div>
+  <div class="col-md-3 col-sm-4 col-xs-5"><center><h3> Fries </h3><center></div>
+</div>
+
+<br>
+
+<div class="row">
+<div class="col-md-3 col-sm-3 col-xs-3"> <center> <b>$2</b> <br> billy goat chips <br> extra pickles <br> baked beans <br> quinoa salad <br> creamy slaw <br><br> <b>$4</b> <br> greens salad <br> ceasar salad </center></div>
+<div class="col-md-6 col-sm-6 col-xs-6"><center><br><br><h4>EACH WEEK TWO BURGERS FACE OFF, WHICHEVER ONE GETS ORDERED MORE, STAYS TO FIGHT ANOTHER WEEK; THE OTHER ONE GETS KICKED TO THE CURB.</h4> <br> <h5>Consult our "Burger Battle Board" or ask your server for this week's matchup </h5> <center></div>
+<div class="col-md-3 col-sm-3 col-xs-3"><center> <b>Small: (one sauce)...$2</b> <br> <b>Large: (two sauces)...$4</b> <br><br> <b>Mayos:</b> rooster, horsey, chipotle, sriracha, house <br><br><b>Mustards:</b> beer, honey, sweet/hot <br><br> <b>Catsups:</b> sriracha, chipotle, curry, wasabi <br><br> <b>Others:</b> bbq, house cheddar sauce<center></div>
+</div>
+</section>
+
+<br>
+
+<section class="SpecialsSalads">
+<div class="container">
+<div class="row">
+  <div class="col-md-4 col-sm-4 col-xs-4"><h3> <center> Chef's Specials </h3> <center> </div>
+  <div class="col-md-8 col-sm-8 col-xs-8"> <center><img id="saladsheader" src="img/Salads.png" alt="Salads"><center></div>
+</div>
+
+
+<div class="row">
+ <div class="col-md-4 col-sm-4 col-xs-4"> <center> <b> Fried Chicken Salad......$10</b> <br> romaine, fried chicken, cornbread croutons, tomato, green onion, corn, pinto beans, cheddar, avocado ranch <center> </div>
+  <div class="col-md-8 col-sm-8 col-xs-8"> <center><b>Chopped......Half $5, Whole $9</b> <br> avocado, cherry tomato, bacon, egg, fire roasted corn, radish, cucumber, cilantro, green onion, lemon juice, salt and pepper<center></div>
+</div>
+
+<br>
+
+<div class="row">
+ <div class="col-md-4 col-sm-4 col-xs-4"> <center> <b> Chicken Sandwich......$10</b> <br> smoked chicken breast, goat cheese, apples, bacon, preserved lemon, green onion aioli, on a pretzel bun<center> </div>
+  <div class="col-md-8 col-sm-8 col-xs-8"> <center><b>Pork Belly......Half $6, Whole $11</b> <br> mixed greens, crispy pork belly, feta, frisee, pickled watermelon dressing, sweet hot cashews<center></div>
+</div>
+</section>
+
 
 
     </div><!-- /.container -->
