--- a/Menu.html
+++ b/Menu.html
@@ -34,8 +34,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="menu.html">Menu</a></li>
-            <li><a href="#about">Our History</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="ContactUs.html">Contact Us</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -97,6 +96,7 @@ BEER BUN - PRETZEL BUN ($1) - GLUTEN FREE BUN</div>
   <div class="col-md-4 col-sm-4 col-xs-4"></div>
 </div>
 
+<br>
 <br>
 
 <div class="row">
@@ -162,6 +162,7 @@ BEER BUN - PRETZEL BUN ($1) - GLUTEN FREE BUN</div>
 </section>
 
 <br>
+<br>
 
 <section class="SpecialsSalads">
 <div class="container">
@@ -184,6 +185,20 @@ BEER BUN - PRETZEL BUN ($1) - GLUTEN FREE BUN</div>
 </div>
 </section>
 
+<br>
+<br>
+
+<section class="Kids">
+<div class="container">
+  <div class="row">
+  <div class="col-md-4 col-sm-4 col-xs-4"><center><img id="Footer" src="img/Footer.png" alt="Footer"><center></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"></div>
+  <div class="col-md-4 col-sm-4 col-xs-4"></div>
+</div>
+<br>
+<br>
+
+</section>
 
 
     </div><!-- /.container -->
