--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
-            <li><a href="#about">Our History</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="ContactUs.html">Contact Us</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
