--- a/ContactUs.html
+++ b/ContactUs.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Bailey's Range!</title>
+    <title>Contact Us</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,9 +41,19 @@
       </div>
     </div>
 
+<section class="ContactUs">
     <div class="container">
 
-     Contact Us
+    <h1> Contact Us! </h1>
+    <br>
+    <h3>Phone: (314) 241-8121 </h3>
+    <h3> 920 Olive St, St Louis, MO 63101 </h3>
+    <br>
+    <a href="https://www.google.com/maps/dir/''/bailey's+range/@38.629019,-90.2288518,13z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x87d8b319adea541d:0x3e03f0302ca69879!2m2!1d-90.194519!2d38.629024" target="_blank"> Need Directions? </a>
+  </div>
+</section>
+
+
 
   </body>
 </html>
