--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
       <br>
 </div>
 
+<section class="address">
+  <div class="address">
+    <h3> 920 Olive Street St. Louis, MO 63101 </h3>
+
+<section class="hours">
+<div class="hours">
+  <h3> Hours </h3>
+  <h5> MON-SAT: <br> 11am–1am <br> SUN: <br> 11am-11:30pm </h5>
+
+</div>
+</section>
+
+<br>
+
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -87,6 +101,7 @@
   </a>
 
 </div>
+
 
 
     </div><!-- /.container -->
