--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <section class="hours">
 <div class="hours">
   <h3> Hours </h3>
-  <h5> MON-SAT: <br> 11am–1am <br> SUN: <br> 11am-11:30pm </h5>
+  <center> <h4> <b> MON-SAT: </b><br> 11am–1am <br> <b> SUN: </b> <br> 11am-11:30pm </h4> <center>
 
 </div>
 </section>
