--- a/ContactUs.html
+++ b/ContactUs.html
@@ -44,12 +44,14 @@
 <section class="ContactUs">
     <div class="container">
 
-    <h1> Contact Us! </h1>
+    <h1>Questions? Concerns? Hungry? <br><br> Contact Us! </h1>
     <br>
     <h3>Phone: (314) 241-8121 </h3>
     <h3> 920 Olive St, St Louis, MO 63101 </h3>
     <br>
-    <a href="https://www.google.com/maps/dir/''/bailey's+range/@38.629019,-90.2288518,13z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x87d8b319adea541d:0x3e03f0302ca69879!2m2!1d-90.194519!2d38.629024" target="_blank"> Need Directions? </a>
+    <h4><a href="https://www.google.com/maps/dir/''/bailey's+range/@38.629019,-90.2288518,13z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x87d8b319adea541d:0x3e03f0302ca69879!2m2!1d-90.194519!2d38.629024" target="_blank"> Need Directions? </a></h4>
+    <h3> Hours </h3>
+  <center><h4> <b> MON-SAT: </b> <br> 11am–1am <br> <b>SUN: </b> <br> 11am-11:30pm </h4><center>
   </div>
 </section>
 
