--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="menu.html">Menu</a></li>
+            <li><a href="Menu.html">Menu</a></li>
             <li><a href="ContactUs.html">Contact Us</a></li>
           </ul>
         </div><!--/.nav-collapse -->
