--- a/ContactUs.html
+++ b/ContactUs.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="menu.html">Menu</a></li>
+            <li><a href="Menu.html">Menu</a></li>
             
             <li class="active"><a href="ContactUs.html">Contact Us</a></li>
           </ul>
