--- a/ContactUs.html
+++ b/ContactUs.html
@@ -35,7 +35,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="Menu.html">Menu</a></li>
             
-            <li class="active"><a href="ContactUs.html">Contact Us</a></li>
+            <li class="active"><a href="#">Contact Us</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
