--- a/Menu.html
+++ b/Menu.html
@@ -54,7 +54,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-3 col-sm-2 col-xs-1">
-<img id="Beef" src="img/beef.png" alt="Beef">
+<img id="Beef" src="img/Beef.png" alt="Beef">
 </div>
 <div class="col-md-6 col-sm-8 col-xs-10">
 <div class="row">
