--- a/ContactUs.html
+++ b/ContactUs.html
@@ -47,7 +47,7 @@
     <h1>Questions? Concerns? Hungry? <br><br> Contact Us! </h1>
     <br>
     <h3>Phone: (314) 241-8121 </h3>
-    <h3> 920 Olive St, St Louis, MO 63101 </h3>
+    <h3> 920 Olive Street, St. Louis, MO 63101 </h3>
     <br>
     <h4><a href="https://www.google.com/maps/dir/''/bailey's+range/@38.629019,-90.2288518,13z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x87d8b319adea541d:0x3e03f0302ca69879!2m2!1d-90.194519!2d38.629024" target="_blank"> Need Directions? </a></h4>
     <h3> Hours </h3>
