--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
 
 <section class="address">
   <div class="address">
-    <h3> 920 Olive Street St. Louis, MO 63101 </h3>
+    <h3> 920 Olive Street, St. Louis, MO 63101 </h3>
+    <h4> Located Downtown just minutes from the 8th & Pine MetroLink station </h4>
+  </section>
+
 
 <section class="hours">
 <div class="hours">
